# hitl-physics

./: CHANGELOG.md  CLAUDE.md  Cargo.toml
data/: prop_coefficients.csv
docs/: db-mapping.md
examples/: axis_symmetry.rs  hover_check.rs
src/: battery.rs  build.rs  config.rs  conservation.rs  integrator.rs  lib.rs  motor.rs  prop_coefficients.rs  px4_pids.rs  quadrotor.rs  wasm_bindings.rs
tests/: prop_lookup_test.rs  reference_builds.rs  thrust_linearity.rs
